--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -1,30 +1,32 @@
 kind: Deployment
 apiVersion: apps/v1beta1
 metadata:
-  name: my-httpd
+  name: httpd-server
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: webservers
+        app: httpd-server
     spec:
       containers:
-      - name: my-httpd-container1
+      - name: httpd-server
         image: httpd
         ports:
         - containerPort: 80
-
+      nodeSelector:
+        cloud.google.com/gke-nodepool: default-pool
+---
 
 kind: Service
 apiVersion: v1
 metadata:
-  name: my-httpd-service
+  name: httpd-server
 spec:
   selector:
-    app: webservers
+    app: httpd-server
   type: LoadBalancer
   ports:
-    - name: my-apache-port
+    - name: httpd-server-port
       port: 8080
       targetPort: 80
