--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:0.3
+        image: virtapp/apache2:0.1
         ports:
           - name: http-port
             containerPort: 80
