--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:0.1
+        image: rancher/rancher:v2.4.2
+        #image: virtapp/apache:0.1
         ports:
           - name: http-port
             containerPort: 80
