--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:0.1
+        image: virtapp/apache2:0.1
         ports:
           - name: http-port
             containerPort: 80
@@ -36,5 +36,5 @@ spec:
   type: ClusterIP
   ports:
     - name: http-port
-      port: 8080
+      port: 80
       targetPort: 80
