--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache2:0.2
+        image: manageiq/manageiq:kasparov-1
         ports:
           - name: http-port
-            containerPort: 80
+            containerPort: 443
       restartPolicy: Always
       nodeSelector:
         cloud.google.com/gke-nodepool: default-pool
@@ -36,5 +36,5 @@ spec:
   type: ClusterIP
   ports:
     - name: http-port
-      port: 8080
-      targetPort: 80
+      port: 443
+      targetPort: 8443
