--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache2:0.2
+        image: agentvi/innovi-get:0.2
         ports:
           - name: http-port
             containerPort: 80
