--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: agentvi/innovi-get:2.1.10
+        image: virtapp/get:2.1
         ports:
           - name: http-port
             containerPort: 80
