--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-php:7.1
+        image: global-registry.virtapp.io/library/wordpress-appflex:0.8
         ports:
         - containerPort: 80
         env:
