--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress-appflex
-        image: global-registry.virtapp.io/library/wordpress-appflex:0.8
+        image: global-registry.virtapp.io/library/wordpress-appflex:0.43 
         ports:
         - containerPort: 80
         env:
@@ -29,6 +29,9 @@ spec:
                 secretKeyRef:
                   name: mysql-pass
                   key: password
+        volumeMounts:
+          - mountPath: data/appflex
+            name: vol1
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
