--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -24,6 +24,13 @@ spec:
               memory: "2Gi"
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html/appflex
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wordpress-data
         env:
             - name: WORDPRESS_DB_HOST
               value: mysql
