--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-appflex:0.46
+        image: global-registry.virtapp.io/library/apache-appflex:0.49
         resources:
             requests:
               memory: "1Gi"
@@ -36,6 +36,13 @@ spec:
                 secretKeyRef:
                   name: mysql-pass
                   key: password
+        volumeMounts:
+        - name: vol1
+          mountPath: data/appflex
+      volumes:
+      - name: vol1
+        persistentVolumeClaim:
+          claimName: data
       restartPolicy: Always
       nodeSelector: {}
 ---
