--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -39,6 +39,7 @@ spec:
         volumeMounts:
         - name: vol1
           mountPath: data/appflex
+          subPath: appflex
       volumes:
       - name: vol1
         persistentVolumeClaim:
