--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -38,7 +38,7 @@ spec:
                   key: password
         volumeMounts:
         - name: vol1
-          mountPath: mnt/data/appflex
+          mountPath: /data/appflex
           subPath: appflex
       volumes:
       - name: vol1
