--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: data
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: longhorn-nfs
+  resources:
+    requests:
+      storage: 10Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,7 +26,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-appflex:0.49
+        image: global-registry.virtapp.io/library/apache-appflex:0.43
         resources:
             requests:
               memory: "1Gi"
@@ -38,8 +50,9 @@ spec:
                   key: password
         volumeMounts:
           mountPath: /data/appflex
-          subPath: appflex
+          name: vol1
       volumes:
+        - name: vol1
         persistentVolumeClaim:
           claimName: data
       restartPolicy: Always
