--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-appflex:0.9
+        image: global-registry.virtapp.io/library/apache-appflex:0.8
         resources:
             requests:
               memory: "1Gi"
@@ -37,15 +37,23 @@ spec:
                   name: mysql-pass
                   key: password         
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - amd64
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - wordpress-appflex
-              topologyKey: "kubernetes.io/hostname"
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - wordpress-appflex
+            topologyKey: kubernetes.io/hostname
 
 ---
 
