--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -41,10 +41,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: kubernetes.io/os=linux
+              - key: node-role.kubernetes.io/master
                 operator: In
                 values:
-                - linux
+                - master
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
