--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -41,10 +41,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: node-role.kubernetes.io/master
+              - key: kubernetes.io/arch=amd64
                 operator: In
                 values:
-                - master
+                - amd64
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
