--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -54,8 +54,8 @@ spec:
                 values:
                 - wordpress-appflex
             topologyKey: kubernetes.io/hostname
-          nodeSelector:
-            kubernetes.io/role: master
+          nodeSelector: {}
+            #kubernetes.io/role: master
 
 ---
 
