--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -37,6 +37,14 @@ spec:
                   name: mysql-pass
                   key: password         
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - arm64
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
