--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -41,10 +41,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: kubernetes.io/arch
+              - key: kubernetes.io/hostname
                 operator: In
                 values:
-                - arm64
+                - wordpress-appflex
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
