--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -41,10 +41,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: kubernetes.io/hostname
+              - key: kubernetes.io/role=master
                 operator: In
                 values:
-                - wordpress-appflex
+                - master
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
