--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -12,6 +12,24 @@ spec:
       labels:
         app: wordpress-appflex
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: "beta.kubernetes.io/arch=amd64"
+                operator: In
+                values:
+                - amd64
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - wordpress-appflex
+            topologyKey: kubernetes.io/hostname
       containers:
       - name: wordpress
         image: global-registry.virtapp.io/library/apache-appflex:0.9
@@ -36,24 +54,7 @@ spec:
                 secretKeyRef:
                   name: mysql-pass
                   key: password         
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: "kubernetes.io/instance-type=k3s"
-                operator: In
-                values:
-                - k3s
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: "app"
-                    operator: In
-                    values:
-                    - wordpress-appflex
-              topologyKey: "kubernetes.io/hostname"
+     
 
 ---
 
