--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -76,7 +76,11 @@ spec:
            value: 25
            periodSeconds: 60
  triggers:
-  - type: cpu
-    metadata:
-      type: Utilization
-      value: "50"
+- type: cron
+  metadata:
+    # Required
+    timezone: Asia/Jerusalem # The acceptable values would be a value from the IANA Time Zone Database.
+    start: 10 * * * *        # Every hour on the 30th minute
+    end: 45 * * * *          # Every hour on the 45th minute
+    desiredReplicas: "6"
+
