--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -66,7 +66,7 @@ spec:
  minReplicaCount: 1
  maxReplicaCount: 10
  advanced:
-   restoreToOriginalReplicaCount: "true"
+   restoreToOriginalReplicaCount: false
    horizontalPodAutoscalerConfig:
      behavior:
        scaleDown:
