--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -68,7 +68,7 @@ spec:
  minReplicaCount: 1
  maxReplicaCount: 3
  triggers:
-- type: memory
+  - type: cpu
   metadata:
     # Required
     type: Utilization/ AverageValue
