--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -15,6 +15,13 @@ spec:
       containers:
       - name: wordpress
         image: global-registry.virtapp.io/library/apache-php:7.2
+        resources:
+            requests:
+              memory: "1Gi"
+              cpu: 1
+            limits:
+              cpu: 2
+              memory: "2Gi"
         ports:
         - containerPort: 80
         env:
