--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -85,9 +85,9 @@ spec:
     metadata:
       # Required fields:
       serverAddress: http://prometheus-service:8080
-      metricName: nginx_ingress_controller_requests # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
-      query: sum(increase(nginx_ingress_controller_requests[1m])) by (status) > 0  # Note: query must return a vector/scalar single element response
-      threshold: '200'
+      metricName: nginx_ingress_controller_nginx_process_connections_total # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
+      query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) by (state)  # Note: query must return a vector/scalar single element response
+      threshold: '5'
       # Optional fields:
       #namespace: monitoring  # for namespaced queries, eg. Thanos
  
