--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -84,10 +84,10 @@ spec:
   - type: prometheus
     metadata:
       # Required fields:
-      serverAddress: http://prometheus-service.ingress-nginx:8080
+      serverAddress: http://prometheus-service:8080
       metricName: nginx_ingress_controller_nginx_process_connections_total           # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
       query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) # Note: query must return a vector/scalar single element response
-      threshold: '50'
+      threshold: '1'
       # Optional fields:
       #namespace: monitoring  # for namespaced queries, eg. Thanos
  
