--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -72,7 +72,7 @@ spec:
     metadata:
       # Required fields:
       serverAddress: http://prometheus-service:8080
-      metricName: nginx_ingress_controller_nginx_process_connections_total           # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
+      metricName: nginx_access_frequency         # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
       query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) # Note: query must return a vector/scalar single element response
       threshold: '1'
       # Optional fields:
