--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -76,6 +76,6 @@ spec:
       query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) # Note: query must return a vector/scalar single element response
       threshold: '10'
       # Optional fields:
-      #namespace: monitoring  # for namespaced queries, eg. Thanos
+      namespace: monitoring  # for namespaced queries, eg. Thanos
  
  
