--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -67,6 +67,16 @@ spec:
   cooldownPeriod:   60                               # Optional. Default: 300 seconds
   minReplicaCount:  1                                # Optional. Default: 0
   maxReplicaCount:  10                               # Optional. Default: 100
+  advanced:
+    restoreToOriginalReplicaCount: true
+    horizontalPodAutoscalerConfig:
+      behavior:
+        scaleDown:
+          stabilizationWindowSeconds: 300
+          policies:
+          - type: Percent
+            value: 100
+            periodSeconds: 15
   triggers:
   - type: prometheus
     metadata:
