--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -81,7 +81,7 @@ spec:
   - type: prometheus
     metadata:
       # Required fields:
-      serverAddress: http://prometheus-service.monitoring.svc:8080
+      serverAddress: http://prometheus-service:8080
       metricName: nginx_access_frequency         # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
       query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) # Note: query must return a vector/scalar single element response
       threshold: '10'
