--- a/apache/deployment.yaml
+++ b/apache/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: apache
-        image: global-registry.virtapp.io/library/apache-php:7.1
+        image: global-registry.virtapp.io/library/apache-default:0.1
         ports:
           - name: http-port
             containerPort: 80
