--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -56,36 +56,31 @@ spec:
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  namespace: default
-  name: wordpress-appflex 
+ namespace: default
+ name: wordpress-appflex
 spec:
-  scaleTargetRef:
-    apiVersion:    apps/v1                           # Optional. Default: apps/v1
-    kind:          Deployment                        # Optional. Default: Deployment
-    name:          wordpress-appflex                 # Mandatory. Must be in the same namespace as the ScaledObject
-  pollingInterval:  30                               # Optional. Default: 30 seconds
-  cooldownPeriod:   60                               # Optional. Default: 300 seconds
-  minReplicaCount:  1                                # Optional. Default: 0
-  maxReplicaCount:  10                               # Optional. Default: 100
-  advanced:
-    restoreToOriginalReplicaCount: true
-    horizontalPodAutoscalerConfig:
-      behavior:
-        scaleDown:
-          stabilizationWindowSeconds: 300
-          policies:
-          - type: Percent
-            value: 100
-            periodSeconds: 15
-  triggers:
-  - type: prometheus
+ scaleTargetRef:
+   kind:          Deployment
+   name:          wordpress-appflex
+ pollingInterval: 20
+ minReplicaCount: 1
+ maxReplicaCount: 4
+ advanced:
+   restoreToOriginalReplicaCount: false
+   horizontalPodAutoscalerConfig:
+     behavior:
+       scaleDown:
+         stabilizationWindowSeconds: 300
+         policies:
+         - type: Percent
+           value: 25
+           periodSeconds: 60
+ triggers:
+  - type: cron
     metadata:
-      # Required fields:
-      serverAddress: http://prometheus-service.monitoring.svc:8080
-      metricName: nginx_access_frequency         # Note: name to identify the metric, generated value would be `prometheus-http_requests_total`
-      query: sum(rate(nginx_ingress_controller_nginx_process_connections_total[1m])) # Note: query must return a vector/scalar single element response
-      threshold: '7'
-      # Optional fields:
-      #namespace: monitoring  # for namespaced queries, eg. Thanos
+      timezone: Asia/Jerusalem
+      start: 0 8 * * *
+      end: 0 18 * * *
+      desiredReplicas: "4"
  
  
