--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -57,28 +57,18 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
  namespace: default
- name: wordpress-virtapp-keda
+ name: wordpress-virtapp
 spec:
  scaleTargetRef:
    kind:          Deployment
    name:          wordpress-virtapp
  pollingInterval: 20
  minReplicaCount: 1
- maxReplicaCount: 4
- advanced:
-   restoreToOriginalReplicaCount: false
-   horizontalPodAutoscalerConfig:
-     behavior:
-       scaleDown:
-         stabilizationWindowSeconds: 300
-         policies:
-         - type: Percent
-           value: 25
-           periodSeconds: 60
+ maxReplicaCount: 3
  triggers:
   - type: cron
     metadata:
       timezone: Asia/Jerusalem
       start: 0 8 * * *
       end: 0 18 * * *
-      desiredReplicas: "4"
+      desiredReplicas: "3"
